# SnFile

./: CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml  pr-check.yml
docs/: CMakeLists.txt  Doxyfile.in
file/: CMakeLists.txt
file/include/snfile/: api.h  defines.h  snfile.h
file/src/: CMakeLists.txt  snfile.c
file/src/nix/: file.c
file/src/win32/: file.c
test/: CMakeLists.txt  test.c
